추가 기능 5번 구현중 [issue] 다른 step으로 jump했을 때도 바뀐 배경색이 유지됨

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ ul {
 
 .square {
   background: #fff;
+
   border: 1px solid #999;
   float: left;
   font-size: 24px;
@@ -31,6 +32,9 @@ ul {
   padding: 0;
   text-align: center;
   width: 34px;
+}
+.colored {
+  background-color: pink;
 }
 
 .square:focus {
